# yarp

./: .clang-format  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  ProjectOptions.cmake  README.md  version.txt
.github/workflows/: arch.x86_64.yml
build-aux/: ci-test
cmake/: Cache.cmake  CompileFlags.cmake  CompilerWarnings.cmake  Core.cmake  FindAlpm.cmake  FindJsoncpp.cmake  Hardening.cmake  InterproceduralOptimization.cmake  Linker.cmake  PreventInSourceBuilds.cmake  ProjectSettings.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  TestUtils.cmake  Tests.cmake
src/: CMakeLists.txt  alpm.cc  alpm.h  alpm_package.cc  alpm_package.h  app.cc  app.h  argument_parser.cc  argument_parser.h  bitwise_enum.h  config.h  help_handler.cc  help_handler.h  main.cc  noop_handler.cc  noop_handler.h  operation.h  operation_handler.h  pacman_conf.cc  pacman_conf.h  query_handler.cc  query_handler.h  settings.h.in  sync_handler.cc  sync_handler.h  utils.cc  utils.h  version_handler.cc  version_handler.h
src/alpmpp/: CMakeLists.txt  alpm.cc  alpm.h  alpm_package.cc  alpm_package.h  bitwise_enum.h  depend.cc  depend.h  file.h  package.cc  package.h  types.h  util.h
src/aurpp/: CMakeLists.txt  client.h  package.cc  package.h  request.cc  request.h  response.cc  response.h
test-data/: pacman.conf
test-data/db/local/cmake-3.20.0-1/: desc  files
test-data/db/local/libfoo-1.0.0-1/: changelog  desc
tests/: CMakeLists.txt  args001.py  args002.py  args003.py  args004.py  args005.py  args006.py  args007.py  changelog001.py  changelog002.py  paru.json  pptest.py  query001.py  query002.py  query003.py  query004.py  query005.py  query006.py  query007.py  query008.py  query009.py  query010.py  query011.py  query012.py  query013.py  query014.py  query015.py  query017.py  query018.py  query019.py  query020.py  query021.py  query022.py  sync001.py  sync002.py  test_aur_client.cc  test_aur_package.cc  test_aur_request.cc  test_aur_response.cc  test_pacman_conf.cc  (+4 more)
tests/args/: CMakeLists.txt  args001.py  args002.py  args004.py  args005.py  args006.py  args007.py
tests/changelog/: CMakeLists.txt  changelog001.py
tests/query/: CMakeLists.txt  query001.py  query002.py  query003.py  query004.py  query005.py  query006.py  query007.py  query008.py  query009.py  query010.py  query011.py  query012.py  query013.py  query014.py  query015.py  query016.py  query017.py  query018.py  query019.py  query020.py  query021.py
tests/version/: CMakeLists.txt  version001.py
